--- a/templates/head.html
+++ b/templates/head.html
@@ -5,4 +5,9 @@
     <meta content="双向树洞 · Lake桑的树洞" property="og:title">
     <meta content="website" property="og:type">
     <meta content="一个实验性质的树洞站点。" property="og:description">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
+    <!--Import jQuery before materialize.js-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/materialize-css@1.0.0/dist/js/materialize.min.js"></script>
 </head>
