--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,22 @@
+<main>
 <div class="container">
-
+    <div class="row">
+      <div class="col l3"></div>
+      <div class="col s12 l6">
+        <div class="card-panel white">
+          <form>
+            <div class="input-field">
+              <input id="thread" type="text" class="validate">
+              <label for="thread">讨论串号</label>
+            </div>
+            <button class="btn waves-effect waves-light" type="submit" name="action">前往
+              <i class="material-icons right">send</i>
+            </button>
+          </form>
+        </div>
+      </div>
+      <div class="col l3"></div>
+    </div>
     <div class="fixed-action-btn">
         <a class="btn-floating btn-large red">
           <i class="large material-icons">mode_edit</i>
@@ -7,3 +24,4 @@
     </div>
     <script>$(document).ready(function(){$('.fixed-action-btn').floatingActionButton();});</script>
 </div>
+</main>
