--- a/templates/index.html
+++ b/templates/index.html
@@ -17,11 +17,22 @@
       </div>
       <div class="col l3"></div>
     </div>
-    <div class="fixed-action-btn">
+    <div id="modal1" class="modal">
+      <div class="modal-content">
+        <h4>新建讨论串</h4>
+        <form>
+
+        </form>
+      </div>
+      <div class="modal-footer">
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat">关闭</a>
+      </div>
+    </div>
+    <div class="fixed-action-btn" id="edit-fab">
         <a class="btn-floating btn-large red">
           <i class="large material-icons">mode_edit</i>
         </a>
     </div>
-    <script>$(document).ready(function(){$('.fixed-action-btn').floatingActionButton();});</script>
+    <script>$(document).ready(function(){$('.fixed-action-btn').floatingActionButton();$('.modal').modal();});</script>
 </div>
 </main>
