--- a/templates/default.html
+++ b/templates/default.html
@@ -5,5 +5,6 @@
     {% include 'header.html' %}
         {% include  'index.html' %}
     {% include 'footer.html' %}
+    {% include 'script.html' %}
 </body>
 </html>
