--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,22 @@
 <main>
-<div class="container">
-    <div class="row">
-      <div class="col l3"></div>
-      <div class="col s12 l6">
+<div class="container" id="container">
+    <div class="row" id="mainContainerRow">
+      <div class="col l3" id="leftDiv"></div>
+      <div class="col s12 l6" id="getThreadCard">
         <div class="card-panel white">
-          <form>
+          <form id="getthread">
             <div class="input-field">
-              <input id="thread" type="text" class="validate">
+              <input id="thread" name="thread" type="text" class="validate">
               <label for="thread">讨论串号</label>
             </div>
-            <button class="btn waves-effect waves-light" type="submit" name="action">前往
+            <input type="hidden" name="action" value="get">
+            <button class="btn waves-effect waves-light" id="submitThreadButton" type="button">前往
               <i class="material-icons right">send</i>
             </button>
           </form>
         </div>
       </div>
-      <div class="col l3"></div>
+      <div class="col l3" id="rightDiv"></div>
     </div>
     <div id="modal1" class="modal">
       <div class="modal-content">
