--- a/templates/head.html
+++ b/templates/head.html
@@ -22,5 +22,25 @@
         main {
             flex: 1 0 auto;
         }
+
+        #mainContainerRow {
+            margin-top: 12px;
+        }
+        
+        .thread-card {
+            position: relative;
+        }
+
+        .content {
+            min-height: 100px;
+            margin-top: 1em;
+            margin-bottom: 1em;
+        }
+
+        .thread-metadata {
+            position: absolute;
+            left: auto;
+            bottom: 5px;
+        }
     </style>
 </head>
