--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container">
-    <a id="logo-container" href="#" class="brand-logo"><img src="static/images/logo.png" alt="Archive" width="40px" height="auto" style="padding:8px 0;" /></a>
+    <a id="logo-container" href="#" class="brand-logo"><img src="/static/images/logo.png" alt="Archive" width="40px" height="auto" style="padding:8px 0;" /></a>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a href="{{ url_for('index') }}">主页</a></li>
@@ -10,7 +10,7 @@
     <ul id="nav-mobile" class="sidenav">
         <li><div class="user-view" style="padding:8em 0.8em 0;">
       <div class="background">
-        <img src="static/images/sidenav.png">
+        <img src="/static/images/sidenav.png">
       </div>
       <a href="#name"><span class="white-text name">双向树洞</span></a>
       </div></li>
