--- a/templates/modal1.html
+++ b/templates/modal1.html
@@ -1,7 +1,7 @@
 <div id="modal1" class="modal">
     <div class="modal-content" id="newThreadModal">
       <h4>新建讨论串</h4>
-      <form id="newThreadForm">
+      <form id="newThreadForm" onsubmit="return false;">
         <div class="row">
             <div class="input-field col s6">
                 <input name="username" type="text" class="validate">
@@ -20,7 +20,7 @@
       </form>
     </div>
     <div class="modal-footer">
-      <a href="" id="newThreadButton" class="waves-effect waves-green btn-flat">提交</a>
-      <a href="" class="modal-close waves-effect waves-green btn-flat">关闭</a>
+      <a id="newThreadButton" class="waves-effect waves-green btn-flat">提交</a>
+      <a class="modal-close waves-effect waves-green btn-flat">关闭</a>
     </div>
 </div>
