--- a/templates/thread.html
+++ b/templates/thread.html
@@ -4,7 +4,7 @@
           <div id="threadForm" class="invisible">
           <div class="col s12 l6 offset-l3" id="getThreadCard">
             <div class="card-panel white">
-              <form id="getthread">
+              <form id="getThreadForm">
                 <div class="input-field">
                   <input id="threadInputField" name="thread" type="text" class="validate">
                   <label for="thread">讨论串号</label>
