--- a/templates/login.html
+++ b/templates/login.html
@@ -4,18 +4,18 @@
             <div class="col s12 l6 offset-l3">
                 <div class="card">
                     <div class="card-content">
-                        <div class="card-title">登录</div>
+                        <div class="card-title translate" data-identifier="login.formTitle">登录</div>
                         <form>
                             <div class="input-field">
                                 <input id="usernameInputField" name="username" type="text" class="validate">
-                                <label for="username">用户名</label>
+                                <label for="username" class="translate" data-identifier="login.username">用户名</label>
                             </div>
                             <div class="input-field">
                                 <input id="threadInputField" name="password" type="password" class="validate">
-                                <label for="password">密码</label>
+                                <label for="password" class="translate" data-identifier="login.password">密码</label>
                             </div>
                             <div>
-                                <input class="btn" type="submit" value="登录">
+                                <input class="btn" type="submit" value="LOG IN">
                             </div>
                         </form>
                     </div>
