--- a/templates/header.html
+++ b/templates/header.html
@@ -3,20 +3,20 @@
     <a id="logo-container" href="#" class="brand-logo"><img src="/static/images/logo.png" alt="Archive" width="40px" height="auto" style="padding:8px 0;" /></a>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="{{ url_for('index') }}">主页</a></li>
-      <li><a href="{{ url_for('public') }}">公告</a></li>
-      <li><a href="{{ url_for('logging') }}">登录</a></li>
+      <li><a href="{{ url_for('index') }}" class="translate" data-identifier="navigation.home">主页</a></li>
+      <li><a href="{{ url_for('public') }}" class="translate" data-identifier="navigation.public">公告</a></li>
+      <li><a href="{{ url_for('logging') }}" class="translate" data-identifier="navigation.login">登录</a></li>
     </ul>
     <ul id="nav-mobile" class="sidenav">
         <li><div class="user-view" style="padding:8em 0.8em 0;">
       <div class="background">
         <img src="/static/images/sidenav.png">
       </div>
-      <a href="#name"><span class="white-text name">双向树洞</span></a>
+      <a href="#name"><span class="white-text name translate" data-identifier="navigation.sidebarName">双向树洞</span></a>
       </div></li>
-      <li><a class="waves-effect" href="{{ url_for('index') }}">主页</a></li>
-      <li><a class="waves-effect" href="{{ url_for('public') }}">公告</a></li>
-      <li><a class="waves-effect" href="{{ url_for('logging') }}">登录</a></li>
+      <li><a class="waves-effect translate" href="{{ url_for('index') }}" data-identifier="navigation.home">主页</a></li>
+      <li><a class="waves-effect translate" href="{{ url_for('public') }}" data-identifier="navigation.public">公告</a></li>
+      <li><a class="waves-effect translate" href="{{ url_for('logging') }}" data-identifier="navigation.login">登录</a></li>
     </ul>
   </div>
 </nav>
