--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
     <div class="row" id="mainContainerRow">
       {% include 'getThreadForm.html' %}
       <div id="threadContainer"></div>
+      {% include 'replyThreadForm.html' %}
     </div>
     {% include 'modalNewThread.html' %}
     {% include 'editFab.html' %}
