--- a/templates/thread.html
+++ b/templates/thread.html
@@ -20,6 +20,7 @@
             </div>
             {% endfor %}
           </div>
+          {% include 'replyThreadForm.html' %}
         </div>
         {% include 'modalNewThread.html' %}
         {% include 'editFab.html' %}
