--- a/templates/modalNewThread.html
+++ b/templates/modalNewThread.html
@@ -5,11 +5,11 @@
         <div class="row">
             <div class="input-field col s6">
                 <input name="username" type="text" class="validate">
-                <label for="first_name" class="translate" data-identifier="newThread.username">用户名</label>
+                <label for="username" class="translate" data-identifier="newThread.username">用户名</label>
             </div>
             <div class="input-field col s6">
                 <input name="title" type="text" class="validate">
-                <label for="first_name" class="translate" data-identifier="newThread.threadTitle">标题</label>
+                <label for="title" class="translate" data-identifier="newThread.threadTitle">标题</label>
             </div>
             <div class="input-field col s12">
                 <textarea name="content" class="materialize-textarea"></textarea>
