--- a/templates/script.html
+++ b/templates/script.html
@@ -1,4 +1,7 @@
 <script>
+
+    var currentThreadId = "";
+
     function newThreadModal(){
         $('#modalNewThread').modal('open');
     }
@@ -51,10 +54,10 @@
         });
         $("#replyThreadButton").addClass("disabled");
         $.ajax({
-            url: "/api/thread/", // need to plus the uid
+            url: "/api/thread/" + currentThreadId,
             type: "POST",
             contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({"action":"create","data":formObject}),
+            data: JSON.stringify({"action":"reply","data":formObject}),
             dataType: "json",
             success: function(data) {
                 console.log(data)
@@ -74,12 +77,15 @@
         });
     }
 
+    $("#replyThreadButton").click(replyThread);
+
     function backToIndex(){
         $('#replyFormContainer').addClass("invisible");
         $('#threadClosedText').addClass("invisible");
         $('#threadContainer').empty();
         $('#threadFormContainer').removeClass("invisible");
         $("#submitThreadButton").removeClass("disabled");
+        currentThreadId = "";
         history.pushState({}, "index", "/");
     }
 
@@ -128,6 +134,7 @@
                         $('#replyForm').addClass("invisible");
                         $('#threadClosedText').removeClass("invisible");
                     }
+                    currentThreadId = thread['thread'];
                     history.pushState({}, "index", "/thread/"+thread['thread']);
                 } else {
                     M.toast({html: `${data['code']} - <span class="translate" data-identifier="${data.data['identifier']}">${data.data['message']}</span>`})
